@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-07T16:28:42Z",
-  "count_outdated" : 402,
-  "uniques_outdated" : 252,
-  "count" : 417,
-  "uniques" : 261,
+  "timestamp" : "2022-08-08T02:03:44Z",
+  "count_outdated" : 404,
+  "uniques_outdated" : 253,
+  "count" : 419,
+  "uniques" : 262,
   "clones" : [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 2,
@@ -56,6 +49,13 @@
     },
     {
       "timestamp": "2022-08-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
